deployments/my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-two
  labels:
    app: my-app-two
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-two
  template:
    metadata:
      labels:
        app: my-app-two
    spec:
      containers:
      - name: my-app-two 
        image: 820242931740.dkr.ecr.eu-north-1.amazonaws.com/my-app:1.7
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: docker-registry-secret
